# gamemode

./: Cargo.toml  README.md  app.manifest  build.rs
src/: main.rs
src/services/: advanced_modules.rs  detector.rs  gamemode.rs  memory.rs  mod.rs  network.rs  options.rs  power.rs  process.rs  process_utils.rs  registry.rs  revi_tweaks.rs  settings.rs  update.rs  windows.rs
ui/: app-window.slint
ui/components/: advanced-popup.slint  glass-card.slint  switch.slint  tech-overlay.slint  toggle-button.slint
